a bunch of updates

--- a/index.html
+++ b/index.html
@@ -1,4 +1,6 @@
 ---
 title: Home
 ---
-<h1>{{ "Hello World!" | downcase }}</h1>
+<h1>{{ '"Hello World!"' }}</h1>
+<quote>"Hello World!"</quote>
+<cite class="cite">-Blake Jarsky</cite>
