updating to newsky refs

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 title: Home
 ---
-<h1>{{ '"Hello World!"' }}</h1>
-<quote>"Hello World!"</quote>
-<cite class="cite">-Blake Jarsky</cite>
+<h1>{{ 'Hello World!' }}</h1>
+<quote>"... "</quote>
+<cite class="cite">-Blake Newsky</cite>
