added ctl to projects

--- a/projects.html
+++ b/projects.html
@@ -3,3 +3,17 @@ title: Projects
 ---
 
 <h1>Can I write HTML here...?</h1>
+    <h2>Why yes, yes I can.</h2>
+        <h3>For example:</h3>
+        <p>Here is a paragraph element. It is one of the best types of elements!</p>
+        <p>Here is another paragraph element.</p>
+
+        <h2>Car Track Laps App</h2>
+        <p>
+            I'm building a web application that will help me find combinations of cars, tracks and race event lengths (laps) for a 
+            mobile car race game I play.
+        <a href="https://race-game.herokuapp.com/">https://race-game.herokuapp.com/</a></p>
+        <p>
+            A player wiki website maintains a table of all game events, so I was able to build a relational database and query it 
+            via a node/express server hosted on heroku. I'm building the UI with react and styling with bootstrap.
+        </p>
